--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -44,6 +44,6 @@
     "remark-gfm": "4.0.1",
     "echarts": "5.0.0",
     "echarts-for-react": "3.0.2",
-    "rehype-raw": "7.0.0"
+    "next": "15.4.5"
   }
 }
