fix: bump to v5 and fix tool invocations

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -38,12 +38,13 @@
     "@radix-ui/react-visually-hidden": "1.2.3",
     "react": "19.1.0",
     "pino": "9.7.0",
-    "ai": "4.3.19",
-    "@ai-sdk/react": "1.2.12",
+    "ai": "5.0.0",
+    "@ai-sdk/react": "2.0.0",
     "react-markdown": "10.1.0",
     "remark-gfm": "4.0.1",
     "echarts": "5.6.0",
     "echarts-for-react": "3.0.2",
-    "next": "15.4.5"
+    "next": "15.4.5",
+    "zod": "4.0.14"
   }
 }
