--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,16 +13,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@neondatabase/serverless": "1.0.1",
     "@qdrant/js-client-rest": "1.15.0",
     "@radix-ui/themes": "3.2.1",
     "@repo/app": "workspace:*",
-    "ai": "4.3.19",
-    "@ai-sdk/openai": "1.3.23",
+    "ai": "5.0.0",
+    "@ai-sdk/openai": "2.0.0",
     "next": "15.3.4",
     "pino": "9.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zod": "3.25.71"
+    "zod": "4.0.14"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
